<resources>
    <string name="app_name">FoodPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_desc">Plan your meals and discover new flavors</string>
    <string name="signup_with_email">Signup With Email</string>
    <string name="social_signup">or use social signup</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="signup">Sign up</string>
    <string name="don_t_hava_an_account">Don\'t Hava An Account?</string>
    <string name="default_web_client_id">509399104090-2rigo6hitcrilc4pmniomvd7m8pc22rp.apps.googleusercontent.com</string>
    <string name="auth_alert_message">Please wait, Loading....</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="calender">Calender</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="all_categories">All Categories</string>
    <string name="all_meals">All Meals</string>
    <string name="all_countries">All Countries</string>
    <string name="sign_out">Sign out</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="ingredientMeasure">ingredientMeasure</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="choose_day">Choose Day</string>
    <string name="skip">Skip</string>
    <string name="explore_food_dishes_and_n_add_them_to_favourite">Explore food dishes and \n add them to favourite</string>
    <string name="your_favourite_list_is_empty">Your Favourite List is Empty</string>
    <string name="you_lost_your_connection_please_check_it">You Lost Your Connection Please Check it.</string>
    <string name="meals_you_might_like">Meals You Might Like</string>
</resources>