<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/choose_day"
        android:textStyle="bold"
        android:textSize="32sp"
        android:gravity="center"
        android:textColor="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12"
        app:singleSelection="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSaturday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/chip_bg"
                android:backgroundTint="@color/primary_color"
                android:text="@string/saturday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/chipSunday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSunday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/chip_bg"
                android:backgroundTint="@color/primary_color"
                android:text="@string/sunday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/chipSaturday"
                app:layout_constraintEnd_toStartOf="@+id/chipMonday"
                app:layout_constraintStart_toEndOf="@+id/chipSaturday"
                app:layout_constraintTop_toTopOf="@+id/chipSaturday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMonday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/chip_bg"
                android:backgroundTint="@color/primary_color"
                android:text="@string/monday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/chipSunday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/chipSunday"
                app:layout_constraintTop_toTopOf="@+id/chipSunday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTuesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/chip_bg"
                android:text="@string/tuesday"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:backgroundTint="@color/primary_color"

                app:layout_constraintEnd_toEndOf="@+id/chipSaturday"
                app:layout_constraintStart_toStartOf="@+id/chipSaturday"
                app:layout_constraintTop_toBottomOf="@+id/chipSaturday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWednesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/chip_bg"
                android:text="@string/wednesday"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/primary_color"
                app:layout_constraintBottom_toBottomOf="@+id/chipTuesday"
                app:layout_constraintEnd_toEndOf="@+id/chipSunday"
                app:layout_constraintStart_toStartOf="@+id/chipSunday"
                app:layout_constraintTop_toTopOf="@+id/chipTuesday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipThursday2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/chip_bg"
                android:text="@string/thursday"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/primary_color"
                app:layout_constraintBottom_toBottomOf="@+id/chipWednesday"
                app:layout_constraintEnd_toEndOf="@+id/chipMonday"
                app:layout_constraintStart_toStartOf="@+id/chipMonday"
                app:layout_constraintTop_toTopOf="@+id/chipWednesday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFriday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:background="@drawable/chip_bg"
                android:backgroundTint="@color/primary_color"
                android:text="@string/friday"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/chipWednesday"
                app:layout_constraintStart_toStartOf="@+id/chipWednesday"
                app:layout_constraintTop_toBottomOf="@+id/chipWednesday" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
